--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-observable": "^1.1.3",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.1.0",
+    "rxjs": "^7.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
