--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-observable": "^1.1.3",
@@ -15,6 +14,7 @@
     "react-thunk": "^1.0.0",
     "redux": "^4.1.0",
     "rxjs": "^7.0.0",
+    "sass": "^1.49.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
